# sonotide

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: framework-ci.yml
cmake/: SonotideConfig.cmake.in
docs/: api.md  architecture.md  foundation.md  migration-plan.md  wasapi-mapping.md
docs/design-decisions/: 0001-name-and-boundaries.md  0002-threading-and-lifetime.md  0003-format-negotiation.md
examples/: CMakeLists.txt  README.md  list_devices.cpp  playback_session.cpp  render_silence.cpp
include/sonotide/: audio_buffer.h  audio_format.h  capture_stream.h  device_info.h  device_selector.h  equalizer.h  error.h  loopback_capture_stream.h  playback_session.h  playback_state.h  render_stream.h  result.h  runtime.h  stream_callback.h  stream_config.h  stream_state.h  stream_status.h  version.h
src/: capture_stream.cpp  equalizer.cpp  error.cpp  loopback_capture_stream.cpp  playback_session.cpp  render_stream.cpp  runtime.cpp
src/internal/: runtime_backend.h  state_machine.cpp  state_machine.h
src/internal/dsp/: biquad_filter.cpp  biquad_filter.h  equalizer_chain.cpp  equalizer_chain.h  output_headroom_controller.cpp  output_headroom_controller.h  parameter_smoother.cpp  parameter_smoother.h
src/internal/stub/: unsupported_runtime_backend.cpp
src/internal/win/: com_scope.cpp  com_scope.h  device_utils.cpp  device_utils.h  hresult_utils.cpp  hresult_utils.h  media_foundation_decoder.cpp  media_foundation_decoder.h  wasapi_runtime_backend.cpp  wasapi_stream_handle.cpp  wasapi_stream_handle.h  wave_format_utils.cpp  wave_format_utils.h
tests/: CMakeLists.txt
tests/unit/: dsp_tests.cpp  equalizer_tests.cpp  playback_session_tests.cpp  result_tests.cpp  state_machine_tests.cpp  stream_wrapper_tests.cpp
